Add "show provider list" variable in modal script
git-svn-id: http://svn.projects.ez.no/janrainauth@3 48468576-9b6a-457b-848c-ad3bc0e48aba

--- a/trunk/settings/janrain.ini
+++ b/trunk/settings/janrain.ini
@@ -19,6 +19,9 @@ SecuredURL=disabled
 # Leave empty if you don't want to use it
 DefaultProvider=
 
+# If enabled, will always display provider list, even if user has logged in a service before
+AlwaysShowProviderList=disabled
+
 # Token URI, used to redirect the user from Janrain
 # You generally don't want to change that
 TokenURI=/janrain/login
