Added some comments in janrain.ini about AuthInfoMap
git-svn-id: http://svn.projects.ez.no/janrainauth@9 48468576-9b6a-457b-848c-ad3bc0e48aba

--- a/trunk/settings/janrain.ini
+++ b/trunk/settings/janrain.ini
@@ -30,6 +30,10 @@ TokenURI=/janrain/login
 AuthInfoURL=https://rpxnow.com/api/v2/auth_info
 
 [UserSettings]
+# Mapping between user content object attribute and information returned by Janrain
+# Key is the ezpublish attribute identifier
+# Value is name of the field in Janrain response
+# See https://rpxnow.com/docs#profile_data for more info about fields returned by Janrain
 AuthInfoMap[]
 AuthInfoMap[first_name]=name/givenName
 AuthInfoMap[last_name]=name/familyName
